# RepoSpoofScanner

./: .gitignore  README.md  pyproject.toml  rapidfuzz-3.12.2-cp312-cp312-macosx_11_0_arm64.whl
cli/: main.py
core/: scanner.py
repospoofscanner/cli/: main.py
repospoofscanner/core/: __init__.py  parsers.py  registries.py  scanner.py
repospoofscanner/utils/: github_client.py
tests/: test_parsers.py
utils/: github_client.py
